# PKINITtools

./: .gitignore  LICENSE  README.md  getnthash.py  gets4uticket.py  gettgtpkinit.py  pyproject.toml  requirements.txt
ntlmrelayx/: httpattack.py
