[tool.poetry]
name = "pkinittools"
version = "0.1.0"
description = ""
authors = ["dirkjanm"]

[tool.poetry.dependencies]
python = "^3.10"
impacket = "^0.10.0"
minikerberos = "^0.2.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
